# nova-physics

./: Cargo.toml  README.md
benches/: physics_bench.rs
crates/nova-collision/: Cargo.toml
crates/nova-collision/src/: collider.rs  lib.rs  query.rs
crates/nova-collision/src/broad_phase/: bvh.rs  mod.rs
crates/nova-collision/src/narrow_phase/: contact.rs  epa.rs  gjk.rs  mod.rs  sat.rs
crates/nova-collision/src/shapes/: box_shape.rs  capsule.rs  compound.rs  convex_hull.rs  mod.rs  sphere.rs  trimesh.rs
crates/nova-constraints/: Cargo.toml
crates/nova-constraints/src/: ball_joint.rs  distance_joint.rs  fixed_joint.rs  hinge_joint.rs  joint.rs  lib.rs  prismatic_joint.rs  solver.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: arena.rs  events.rs  handles.rs  lib.rs  pool.rs
crates/nova-dynamics/: Cargo.toml
crates/nova-dynamics/src/: body.rs  integrator.rs  island.rs  lib.rs  sleeping.rs  solver.rs
crates/nova-math/: Cargo.toml
crates/nova-math/src/: aabb.rs  isometry.rs  lib.rs  types.rs
crates/nova-pipeline/: Cargo.toml
crates/nova-pipeline/src/: lib.rs  pipeline.rs  step.rs
crates/nova-world/: Cargo.toml
crates/nova-world/src/: builders.rs  lib.rs  world.rs
examples/: falling_boxes.rs  joints.rs  playground.rs
nova/: Cargo.toml
nova/src/: lib.rs
playground/: Cargo.toml  build.rs
playground/src/: arena.rs  components.rs  convert.rs  main.rs  presets.rs  resources.rs
playground/src/plugins/: camera.rs  console.rs  debug.rs  effects.rs  input.rs  inventory.rs  mod.rs  physics.rs  settings.rs  spawning.rs  time_control.rs  tools.rs  vehicle.rs  visual_effects.rs
tests/: integration_tests.rs
