[package]
name = "nova-collision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Collision detection for Nova Physics Engine"

[dependencies]
nova-math.workspace = true
nova-core.workspace = true
smallvec.workspace = true
bitflags.workspace = true
rayon.workspace = true
hashbrown.workspace = true
slotmap.workspace = true
glam.workspace = true
